# dynamic-rc-utilities

./: .gitignore  README.md  pyproject.toml
src/pybrc/: __init__.py  data_structure.py  kernel_rank.py  memory_capacity.py  parse.py  reconstruction.py  utils.py  visualization.py
src/pybrc/continuous/: __init__.py  extract_stim_from_adc.py  rate_state.py  rc_analysis.py
src/pybrc/discrete/: base.py  parse.py  rc_analysis.py  util.py
src/pybrc/reservoir/: CA.py  __init__.py
src/rc/: __init__.py  memory_capacity.py  parse.py  utils.py
src/rc/reservoir/: CA.py  ESN.py
